# icfpc-2017

./: .gitignore  README.md  benchmark.sh  build.sh  install  submission.sh
lambda_punter/: Cargo.toml
lambda_punter/src/: chat.rs  client.rs  game.rs  graph.rs  lib.rs  map.rs  prob.rs  proto.rs  test_common.rs  types.rs
lambda_punter/src/solvers/: always_pass.rs  gn.rs  link_mines.rs  mod.rs  nearest.rs
lambda_punter_offline/: Cargo.toml
lambda_punter_offline/src/: main.rs
lambda_punter_online/: Cargo.toml
lambda_punter_online/src/: main.rs
map_vis/: Cargo.toml
map_vis/src/: main.rs
punter-server/: punter-server.scm
punter-server/ext-lib/: pipe.scm
punter-server/lib/: game-data.scm  game.scm  loader.scm  log.scm  replay.scm
punter-server/replays/: lamduct-test.rep  mniip.rep  test.rep  triangle-kontur.rep
sokoban/: Cargo.toml
sokoban/maps/: map1.map  microban153.map  microban154.map  microban155.map  microban2.map  sasquatch5.map  simple.map
sokoban/src/: game.rs  lib.rs  main.rs  map.rs  parser.rs  solver.rs
sokoban_gui/: Cargo.toml
sokoban_gui/src/: main.rs
tools/benchmark/: array-to-texttable.php  benchmark.php  composer.json  parse-status.php  server.php
tools/ci/: .gitignore  build-dist-tail.sh  build-dist.sh  build.sh  common.php  composer.json  config.php.example  index.php  push.php  submission.sh
