[package]
name = "lambda_punter"
version = "0.1.12"
authors = ["Alexey Voznyuk <me@swizard.info>"]

[dependencies]
serde = "1.0.8"
serde_json = "1.0"
serde_derive = "1.0"

[source.crates-io]
registry = 'https://github.com/rust-lang/crates.io-index'
replace-with = 'vendored-sources'

[source.vendored-sources]
directory = 'vendor'
